Fix display issue on mobile

--- a/src/web/static/src/index.css
+++ b/src/web/static/src/index.css
@@ -15,6 +15,7 @@
 
     box-sizing: border-box;
 
+    font-size: 100%;
     text-align: center;
     text-decoration: none;
 
@@ -40,6 +41,9 @@
     background-color: white;
 }
 
+#file-selector, #upload-file {
+    display: none;
+}
 
 #upload, #download {
     width: 60vw;
